# lith

./: .gitignore  README.md  meson.build
framework/: meson.build
framework/include/lith/: assets.h  capsule.h  clock.h  color.h  event.h  font.h  icosphere.h  input.h  interpolation.h  io.h  job.h  line.h  log.h  quad.h  random.h  rect.h  shader.h  sketch.h  string.h  text.h  texture.h  timer.h  window.h
framework/src/: assets.cpp  bytes.cpp  capsule.cpp  clock.cpp  font.cpp  glad.c  icosphere.cpp  io.cpp  line.cpp  log.cpp  mesh.cpp  plane.cpp  quad.cpp  shader.cpp  sketchapi.cpp  stb_image.h  string.cpp  text.cpp  ui.cpp
include/gl/: glad.h
include/lith/: audio.h  buffer.h  bytes.h  context.h  lens.h  math.h  mesh.h  plane.h  plugin.h  render.h  sketchapi.h  sprite.h  target.h  typedef.h  ui.h  uvsphere.h  zip.h
lithProjects/DashGame/src/: BulletRenderer.cpp  BulletRenderer.h  entity.cpp  level.cpp  sketch.cpp
lithProjects/DashGame/src/content/: levels.cpp  levels.h
lithProjects/DashGame/src/entity/: Bullet.cpp  Bullet.h  DeathDome.h  Door.cpp  Enemy.cpp  Text.h  Wall.cpp
lithProjects/FracShader/src/: sketch.cpp
lithProjects/GameOfLifeShader/src/: sketch.cpp
lithProjects/WaterShader/src/: sketch.cpp  uewaves.h
lithProjects/lithTetris/src/: Tetris.cpp  Tetris.h  sketch.cpp
runtime/: meson.build
runtime/src/: Project.cpp  SDLMixerAudioBackend.cpp  SDLWindow.cpp  SDLWindow.h  SketchPlugin.cpp  SketchPlugin.h  SketchRenderBackend.cpp  SketchRenderBackend.h  main.cpp  msdfgenFontGenerator.cpp  msdfgenFontGenerator.h  printfLogger.cpp  printfLogger.h
src/: audio.cpp  buffer.cpp  input.cpp  interpolation.cpp  job.cpp  lens.cpp  log.cpp  math.cpp  random.cpp  rect.cpp  sprite.cpp  target.cpp  texture.cpp  timer.cpp  uvsphere.cpp
src/game/: entity.h  global.cpp  global.h  level.h  sketch.cpp
src/game/content/: levels.cpp  levels.h
src/game/entity/: DeathDome.cpp  Door.h  Enemy.h  Player.cpp  Player.h  Text.cpp  Wall.h
src/runtime/: Project.cpp  Project.h  SDLMixerAudioBackend.h  SDLWindow.cpp  main.cpp  printfLogger.cpp
